Bug 1521717 - Unmark original object if we are going to return it from JS_TransplantObject r=sfink